Fixed dart sass compatibility issues

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -10,7 +10,7 @@
   @import 'styles/helpers/default-styles'
 
   div.vuepress-plugin-demo-block__wrapper div.vuepress-plugin-demo-block__display &.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
-    $GRID_SHOULD_ALIGN: true !global
+    $GRID_SHOULD_ALIGN: true
 
     @import '../../packages/dermis/index'
 
