Added inliner as a dependency

--- a/packages/dermis/index.sass
+++ b/packages/dermis/index.sass
@@ -9,6 +9,7 @@
 @import "@dermis/panel"
 @import "@dermis/section"
 
+@import "@dermis/inliner"
 @import "@dermis/caption"
 @import "@dermis/link"
 @import "@dermis/table"
