Documentation additions for control-box added. Add `controls` dependency to dermis package

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -34,6 +34,7 @@
     @import 'styles/helpers/tone'
     @import 'styles/helpers/section'
     @import 'styles/helpers/inliner'
+    @import 'styles/helpers/controls'
 
     @extend body
     @extend :root
