Added documentation for control stack. Small fixes

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -12,6 +12,8 @@
   div.vuepress-plugin-demo-block__wrapper div.vuepress-plugin-demo-block__display &.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
     $GRID_SHOULD_ALIGN: true
 
+    $control-stack-selectors: ('&.d-control-button-example', '&.d-control-input-example')
+
     @import '../../packages/dermis/index'
 
     .material-icons
