Separated inline mechanics from a control-checker into a mixin

--- a/docs/.vuepress/styles/helpers/controls.sass
+++ b/docs/.vuepress/styles/helpers/controls.sass
@@ -44,3 +44,5 @@
     &:after
       display: block
       background-color: transparent
+
+  +control-checker--variant_inline($block: '.d-control-checkbox-example')
