EQ documentation integration

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -15,6 +15,7 @@
     $control-stack-selectors: ('&.d-control-button-example', '&.d-control-input-example')
 
     @import '../../packages/dermis/index'
+    @import '../../packages/eq/index'
 
     .material-icons
       font-family: 'Material Icons'
@@ -37,6 +38,7 @@
     @import 'styles/helpers/section'
     @import 'styles/helpers/inliner'
     @import 'styles/helpers/controls'
+    @import 'styles/helpers/eq'
 
     @extend body
     @extend :root
