Removed dermis dependencies from `eq` to be able to use it in any environment

--- a/packages/eq/src/definition.sass
+++ b/packages/eq/src/definition.sass
@@ -1,1 +1,3 @@
-+cssvar-expose-map($eq-size-map, $prefix: 'eq-size')
+@at-root :root
+  @each $key, $value in $eq-size-map
+    --eq-size-#{$key}: #{$value}
