Enhanced `eq` mixins to use @extend for auto generated size adaptations

--- a/docs/.vuepress/styles/helpers/eq.sass
+++ b/docs/.vuepress/styles/helpers/eq.sass
@@ -14,5 +14,5 @@
 
     &__element
       &--clear
-        +eq-adaptive('.ds-eq-check ')
+        +eq-both-adaptive('.ds-eq-check ')
           background: #000
