--- a/packages/dermis/index.sass
+++ b/packages/dermis/index.sass
@@ -1,6 +1,7 @@
 @import "@dermis/base"
 @import "@dermis/rut"
 @import "@dermis/mq"
+@import "@dermis/qproxy"
 @import "@dermis/tone"
 @import "@dermis/type"
 
