Migrated all packages to a new `qproxy` mixins

--- a/packages/caption/src/block.sass
+++ b/packages/caption/src/block.sass
@@ -15,27 +15,27 @@
         font-weight: 600
 
       &1
-        +mq-both-adaptive
+        +q-both-adaptive
           +type-line('3xl', 'display')
 
       &2
-        +mq-both-adaptive
+        +q-both-adaptive
           +type-line('2xl', 'display')
 
       &3
-        +mq-both-adaptive
+        +q-both-adaptive
           +type-line('xl', 'heading')
 
       &4
-        +mq-both-adaptive
+        +q-both-adaptive
           +type-line('lg', 'heading')
 
       &5
-        +mq-both-adaptive
+        +q-both-adaptive
           +type-line('md', 'heading')
 
       &6
-        +mq-both-adaptive
+        +q-both-adaptive
           +type-line('sm', 'heading')
 
     &variant_
