--- a/packages/aspect-ratio/src/block.sass
+++ b/packages/aspect-ratio/src/block.sass
@@ -23,14 +23,14 @@
 
     &ratio_
       &1x1
-        +mq-both-adaptive
+        +q-both-adaptive
           padding-bottom: 100%
 
       @each $a, $b in $aspect-ratio-ratios
         &#{$a}x#{$b}
-          +mq-both-adaptive
+          +q-both-adaptive
             padding-bottom: aspect-ratio-percentage($a $b)
 
         &#{$b}x#{$a}
-          +mq-both-adaptive
+          +q-both-adaptive
             padding-bottom: aspect-ratio-percentage($b $a)
