Removed unuseful `item` element from control box basis. Not there's only `element` matters

--- a/packages/controls/src/box/mixins.sass
+++ b/packages/controls/src/box/mixins.sass
@@ -37,13 +37,13 @@
     &body
       @extend %control-box__body
 
-    &item--primary
-      @extend %control-box__item--primary
-
     &element
       @extend %control-box__element
 
       &--
+        &primary
+          @extend %control-box__element--primary
+
         &attachment_
           &append
             @extend %control-box__element--attachment_append
