Changed base theme definition

--- a/docs/.vuepress/styles/helpers/space.sass
+++ b/docs/.vuepress/styles/helpers/space.sass
@@ -11,8 +11,8 @@
     position: absolute
     left: 0
     top: 0
-    border: 1px solid rgba(map-path($theme, primary, text), 0.2)
-    background-color: rgba(map-path($theme, primary, light), 0.2)
+    border: 1px solid var(--theme-relief-5)
+    background-color: var(--theme-relief-3)
     content: ''
     z-index: -1
 
@@ -57,8 +57,8 @@
     position: absolute
     left: 0
     top: 0
-    border: 1px solid rgba(map-path($theme, primary, text), 0.2)
-    background-color: rgba(map-path($theme, primary, light), 0.2)
+    border: 1px solid var(--theme-relief-5)
+    background-color: var(--theme-relief-3)
     content: ''
     z-index: -1
 
