--- a/packages/eq/src/variables.sass
+++ b/packages/eq/src/variables.sass
@@ -14,8 +14,8 @@ $eq-size-lg: 780 !default
 $eq-size-xl: 1040 !default
 
 $eq-size-map: () !default
-$eq-size-map: map-merge($eq-size-map, ('xs': $eq-size-xs))
-$eq-size-map: map-merge($eq-size-map, ('sm': $eq-size-sm))
-$eq-size-map: map-merge($eq-size-map, ('md': $eq-size-md))
-$eq-size-map: map-merge($eq-size-map, ('lg': $eq-size-lg))
-$eq-size-map: map-merge($eq-size-map, ('xl': $eq-size-xl))
+$eq-size-map: map-merge(('xs': $eq-size-xs), $eq-size-map)
+$eq-size-map: map-merge(('sm': $eq-size-sm), $eq-size-map)
+$eq-size-map: map-merge(('md': $eq-size-md), $eq-size-map)
+$eq-size-map: map-merge(('lg': $eq-size-lg), $eq-size-map)
+$eq-size-map: map-merge(('xl': $eq-size-xl), $eq-size-map)
