--- a/packages/tone/src/definition.sass
+++ b/packages/tone/src/definition.sass
@@ -1,5 +1,1 @@
-+cssvar-expose-map($theme-base, $prefix: 'theme-base')
-
-+cssvar-expose-map($theme-inverse, $prefix: 'theme-inverse')
-
-+tone-theme-apply($theme-base, $name: 'theme-base')
++tone-theme-apply($theme)
