--- a/packages/tone/src/mixins/generator.sass
+++ b/packages/tone/src/mixins/generator.sass
@@ -1,4 +1,5 @@
-// Algorythm from https://www.colorbox.io/
+// Algorithm from https://www.colorbox.io/
+
 @function tone-range-value($value, $base, $current)
   $shift: $value - nth($base, 1)
   $base-diff: nth($base, 2) - nth($base, 1)
