--- a/packages/tone/src/variables/base.scss
+++ b/packages/tone/src/variables/base.scss
@@ -5,9 +5,9 @@ $TONE_HUE_MAX: 359;
 $TONE_SATURATION_MAX: 100;
 $TONE_BRIGHTNESS_MAX: 100;
 
-$TONE_HUE_RANGE: 0 $TONE_HUE_MAX;
-$TONE_SATURATION_RANGE: 0 $TONE_SATURATION_MAX;
-$TONE_BRIGHTNESS_RANGE: 0 $TONE_BRIGHTNESS_MAX;
+$TONE_HUE_RANGE: 0 $TONE_HUE_MAX !default;
+$TONE_SATURATION_RANGE: 0 $TONE_SATURATION_MAX !default;
+$TONE_BRIGHTNESS_RANGE: 0 $TONE_BRIGHTNESS_MAX !default;
 
 $TONE_HUE_SHIFT: 4 !default;
 $TONE_SATURATION_SHIFT: $TONE_SATURATION_MAX / 6 !default;
