--- a/packages/tone/src/variables/theme.scss
+++ b/packages/tone/src/variables/theme.scss
@@ -1,51 +1,19 @@
-$theme-base: null !default;
-$theme-inverse: null !default;
-$theme: null !default;
+$theme: () !default;
 
 @if $TONE_GENERATE_THEME {
-  $theme-base-color-names: (
-    background: 5, light: 40, base: 50, dark: 60, text: 100, text-inverse: 0
-  );
-
-  $theme-base: (
-    primary: tone-color-palette-names('blue', $theme-base-color-names),
-    accent: tone-color-palette-names('magenta', $theme-base-color-names),
+  $theme: map-merge((
+    primary: map-get($tone-palettes, 'blue'),
+    accent: map-get($tone-palettes, 'magenta'),
 
     relief: tone-color-palette-names('grey', (
-      1: 0, 2: 10, 3: 20, 4: 30, 5: 40
+      1: 0, 2: 5, 3: 10, 4: 20, 5: 30, 6: 40
     )),
     text: tone-color-palette-names('grey', (
-      1: 100, 2: 80, 3: 60, 4: 40
+      1: 100, 2: 80, 3: 60, 4: 50, 5: 40, 6: 30
     )),
 
-    danger: tone-color-palette-names('red', $theme-base-color-names),
-    warning: tone-color-palette-names('orange', $theme-base-color-names),
-    success: tone-color-palette-names('lite-green', $theme-base-color-names),
-    info: tone-color-palette-names('blue', $theme-base-color-names),
-    highlight: tone-color-palette-names('yellow', $theme-base-color-names),
-  ) !default;
-
-  $theme-inverse-color-names: (
-    background: 90, light: 30, base: 40, dark: 50, text: 0, text-inverse: 100
-  );
-
-  $theme-inverse: (
-    primary: tone-color-palette-names('blue', $theme-inverse-color-names),
-    accent: tone-color-palette-names('magenta', $theme-inverse-color-names),
-
-    relief: tone-color-palette-names('grey', (
-      1: 100, 2: 80, 3: 70, 4: 60, 5: 50
-    )),
-    text: tone-color-palette-names('grey', (
-      1: 0, 2: 20, 3: 40, 4: 60
-    )),
-
-    danger: tone-color-palette-names('red', $theme-inverse-color-names),
-    warning: tone-color-palette-names('orange', $theme-inverse-color-names),
-    success: tone-color-palette-names('lite-green', $theme-inverse-color-names),
-    info: tone-color-palette-names('blue', $theme-inverse-color-names),
-    highlight: tone-color-palette-names('yellow', $theme-inverse-color-names),
-  ) !default;
-
-  $theme: $theme-base !default;
+    link-base: var(--theme-primary-50),
+    link-active: var(--theme-primary-40),
+    link-visited: var(--theme-primary-80),
+  ), $theme) !default;
 }
