--- a/docs/.vuepress/styles/helpers/tone.sass
+++ b/docs/.vuepress/styles/helpers/tone.sass
@@ -7,14 +7,14 @@
         &#{$name}_#{$mark}
           +tone-background($color, map-get($palette, 0), map-get($palette, 100))
 
-@mixin d-theme-block($selector, $key, $theme)
-  .d-theme-#{$selector}-environment
+@mixin d-theme-block($key, $theme)
+  .d-theme-environment
     margin: -$space-xl
     padding: $space-xl
     background-color: var(--#{$key}-relief-1)
     color: var(--#{$key}-text-1)
 
-  .d-theme-#{$selector}-relief
+  .d-theme-relief
     padding: $space-md $space-lg
     margin-bottom: $space-md
     background-color: var(--#{$key}-relief-2)
@@ -25,58 +25,17 @@
         margin-bottom: $space-md
 
         &--
-          &3
-            background-color: var(--#{$key}-relief-3)
-
-          &4
-            background-color: var(--#{$key}-relief-4)
-
-          &5
-            background-color: var(--#{$key}-relief-5)
+          @each $k, $value in map-get($theme, 'relief')
+            &#{$k}
+              background-color: var(--#{$key}-relief-#{$k})
 
       &text
+        display: block
+        line-height: 1
+
         &--
-          &2
-            display: block
-            line-height: 1
-            color: var(--#{$key}-text-2)
+          @each $k, $value in map-get($theme, 'text')
+            &#{$k}
+              color: var(--#{$key}-text-#{$k})
 
-          &3
-            display: block
-            line-height: 1
-            color: var(--#{$key}-text-3)
-
-          &4
-            display: block
-            line-height: 1
-            color: var(--#{$key}-text-4)
-
-  .d-theme-#{$selector}-content-entity
-    &--
-      @each $name, $variations in $theme
-        @if map-get($variations, base)
-          &color_#{$name}
-            padding: $space-md $space-lg
-            background-color: var(--#{$key}-#{$name}-background)
-            color: var(--#{$key}-#{$name}-text)
-
-            .d-theme-#{$selector}-content-entity
-              &__
-                &active
-                  cursor: pointer
-                  padding: $space-md $space-lg
-                  background-color: var(--#{$key}-#{$name}-base)
-                  color: var(--#{$key}-#{$name}-text-inverse)
-                  +tone-background(map-get($variations, base), map-get($variations, text), map-get($variations, text-inverse))
-
-                  &:hover
-                    background-color: var(--#{$key}-#{$name}-dark)
-                    +tone-background(map-get($variations, dark), map-get($variations, text), map-get($variations, text-inverse))
-
-                  &:active
-                    background-color: var(--#{$key}-#{$name}-light)
-                    +tone-background(map-get($variations, light), map-get($variations, text), map-get($variations, text-inverse))
-
-+d-theme-block('base', 'theme-base', $theme-base)
-
-+d-theme-block('inverse', 'theme-inverse', $theme-inverse)
++d-theme-block('theme', $theme)
