--- a/packages/type/src/variables.sass
+++ b/packages/type/src/variables.sass
@@ -15,17 +15,17 @@ $type-font-size-5xl: 96px !default
 $type-font-size-body: $type-font-size-md !default
 
 $type-font-size-map: () !default
-$type-font-size-map: map-merge($type-font-size-map, ('2xs': $type-font-size-2xs))
-$type-font-size-map: map-merge($type-font-size-map, ('xs': $type-font-size-xs))
-$type-font-size-map: map-merge($type-font-size-map, ('sm': $type-font-size-sm))
-$type-font-size-map: map-merge($type-font-size-map, ('md': $type-font-size-md))
-$type-font-size-map: map-merge($type-font-size-map, ('lg': $type-font-size-lg))
-$type-font-size-map: map-merge($type-font-size-map, ('xl': $type-font-size-xl))
-$type-font-size-map: map-merge($type-font-size-map, ('2xl': $type-font-size-2xl))
-$type-font-size-map: map-merge($type-font-size-map, ('3xl': $type-font-size-3xl))
-$type-font-size-map: map-merge($type-font-size-map, ('4xl': $type-font-size-4xl))
-$type-font-size-map: map-merge($type-font-size-map, ('5xl': $type-font-size-5xl))
-$type-font-size-map: map-merge($type-font-size-map, ('body': $type-font-size-body))
+$type-font-size-map: map-merge(('2xs': $type-font-size-2xs), $type-font-size-map)
+$type-font-size-map: map-merge(('xs': $type-font-size-xs), $type-font-size-map)
+$type-font-size-map: map-merge(('sm': $type-font-size-sm), $type-font-size-map)
+$type-font-size-map: map-merge(('md': $type-font-size-md), $type-font-size-map)
+$type-font-size-map: map-merge(('lg': $type-font-size-lg), $type-font-size-map)
+$type-font-size-map: map-merge(('xl': $type-font-size-xl), $type-font-size-map)
+$type-font-size-map: map-merge(('2xl': $type-font-size-2xl), $type-font-size-map)
+$type-font-size-map: map-merge(('3xl': $type-font-size-3xl), $type-font-size-map)
+$type-font-size-map: map-merge(('4xl': $type-font-size-4xl), $type-font-size-map)
+$type-font-size-map: map-merge(('5xl': $type-font-size-5xl), $type-font-size-map)
+$type-font-size-map: map-merge(('body': $type-font-size-body), $type-font-size-map)
 
 // LETTER SPACING:
 $type-letter-spacing-2xs: -0.05em !default
@@ -43,18 +43,18 @@ $type-letter-spacing-body: $type-letter-spacing-md !default
 $type-letter-spacing-wide: $type-letter-spacing-2xl !default
 
 $type-letter-spacing-map: () !default
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('2xs': $type-letter-spacing-2xs))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('xs': $type-letter-spacing-xs))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('sm': $type-letter-spacing-sm))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('md': $type-letter-spacing-md))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('lg': $type-letter-spacing-lg))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('xl': $type-letter-spacing-xl))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('2xl': $type-letter-spacing-2xl))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('3xl': $type-letter-spacing-3xl))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('display': $type-letter-spacing-display))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('heading': $type-letter-spacing-heading))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('body': $type-letter-spacing-body))
-$type-letter-spacing-map: map-merge($type-letter-spacing-map, ('wide': $type-letter-spacing-wide))
+$type-letter-spacing-map: map-merge(('2xs': $type-letter-spacing-2xs), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('xs': $type-letter-spacing-xs), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('sm': $type-letter-spacing-sm), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('md': $type-letter-spacing-md), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('lg': $type-letter-spacing-lg), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('xl': $type-letter-spacing-xl), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('2xl': $type-letter-spacing-2xl), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('3xl': $type-letter-spacing-3xl), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('display': $type-letter-spacing-display), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('heading': $type-letter-spacing-heading), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('body': $type-letter-spacing-body), $type-letter-spacing-map)
+$type-letter-spacing-map: map-merge(('wide': $type-letter-spacing-wide), $type-letter-spacing-map)
 
 // LINE HEIGHTS:
 $type-line-height-xs: 1 !default
@@ -66,12 +66,12 @@ $type-line-height-heading: $type-line-height-sm !default
 $type-line-height-body: $type-line-height-md !default
 
 $type-line-height-map: () !default
-$type-line-height-map: map-merge($type-line-height-map, ('xs': $type-line-height-xs))
-$type-line-height-map: map-merge($type-line-height-map, ('sm': $type-line-height-sm))
-$type-line-height-map: map-merge($type-line-height-map, ('md': $type-line-height-md))
-$type-line-height-map: map-merge($type-line-height-map, ('display': $type-line-height-display))
-$type-line-height-map: map-merge($type-line-height-map, ('heading': $type-line-height-heading))
-$type-line-height-map: map-merge($type-line-height-map, ('body': $type-line-height-body))
+$type-line-height-map: map-merge(('xs': $type-line-height-xs), $type-line-height-map)
+$type-line-height-map: map-merge(('sm': $type-line-height-sm), $type-line-height-map)
+$type-line-height-map: map-merge(('md': $type-line-height-md), $type-line-height-map)
+$type-line-height-map: map-merge(('display': $type-line-height-display), $type-line-height-map)
+$type-line-height-map: map-merge(('heading': $type-line-height-heading), $type-line-height-map)
+$type-line-height-map: map-merge(('body': $type-line-height-body), $type-line-height-map)
 
 // TYPEFACES:
 $type-face-body: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default
@@ -79,9 +79,9 @@ $type-face-heading: $type-face-body !default
 $type-face-monospace: SFMono-Regular, 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace !default
 
 $type-face-map: () !default
-$type-face-map: map-merge($type-face-map, ('monospace': $type-face-monospace))
-$type-face-map: map-merge($type-face-map, ('heading': $type-face-heading))
-$type-face-map: map-merge($type-face-map, ('body': $type-face-body))
+$type-face-map: map-merge(('monospace': $type-face-monospace), $type-face-map)
+$type-face-map: map-merge(('heading': $type-face-heading), $type-face-map)
+$type-face-map: map-merge(('body': $type-face-body), $type-face-map)
 
 // SPACES:
 $type-space-base: $space-md !default
