--- a/packages/tone/src/variables/palette.scss
+++ b/packages/tone/src/variables/palette.scss
@@ -1,10 +1,12 @@
 $TONE_PALETTE_MARKS: 0 5 10 20 30 40 50 60 70 80 90 100 !default;
-$TONE_GAPS_FILLER_SPECS: (
+$TONE_GAPS_FILLER_SPECS: () !default;
+$TONE_GAPS_FILLER_SPECS: map-merge((
+  'marks': $TONE_PALETTE_MARKS,
   'start-base': #fff,
   'end-base': #000,
   'start-weight': 5%,
   'end-weight': 30%,
-) !default;
+), $TONE_GAPS_FILLER_SPECS);
 
 $tone-palette-red: null !default;
 $tone-palette-orange: null !default;
