Fixed coloring in control examples

--- a/docs/.vuepress/styles/helpers/controls.sass
+++ b/docs/.vuepress/styles/helpers/controls.sass
@@ -14,12 +14,12 @@
 .d-control-button-example
   +control-box
 
-  background: var(--theme-primary-base)
-  color: var(--theme-primary-text-inverse)
+  background: var(--theme-relief-6)
+  color: var(--theme-relief-1)
 
   &--variant_accent
-    background: var(--theme-accent-base)
-    color: var(--theme-accent-text-inverse)
+    background: var(--theme-relief-2)
+    color: var(--theme-text-2)
 
 
 .d-control-checkbox-example
@@ -29,12 +29,12 @@
   &__
     &label
       &:before
-        background-color: var(--theme-primary-base)
+        background-color: var(--theme-relief-6)
 
       &:after
         display: none
-        background-color: var(--theme-primary-text-inverse)
-        border-bottom: 2px solid var(--theme-primary-text-inverse)
+        background-color: var(--theme-relief-1)
+        border-bottom: 2px solid var(--theme-relief-1)
 
   +control-checker-state(checked, $block: '.d-control-checkbox-example')
     &:after
